[gd_scene load_steps=10 format=3 uid="uid://dxrdb8msr6tnk"]

[ext_resource type="Script" path="res://scripts/Weapon.gd" id="1_pes30"]
[ext_resource type="Script" path="res://scripts/WeaponInHand.gd" id="2_sx15f"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_avy5c"]
points = PackedVector3Array(0, 0.00071035, -0.2125, 0.2125, 0.0027937, -0.210905, 0.109273, 0.28323, -0.21473, 0.2125, 0.00279371, 0, 0.00159523, 0.00279371, 0, 0.211312, 0.221335, -0.00118812, 0.00186015, 0.222051, -0.21064, 0.211312, 0.221335, -0.209717, 0.00186015, 0.222051, -0.000264923, 0.109273, 0.28323, 0.00382539)

[sub_resource type="BoxShape3D" id="BoxShape3D_1iic7"]
size = Vector3(1.63501, 1.53931, 1.69531)

[sub_resource type="BoxShape3D" id="BoxShape3D_n5fdi"]
size = Vector3(1.00391, 1.0332, 0.996094)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xj64e"]
resource_name = "wood"
albedo_color = Color(0.952921, 0.798667, 0.660025, 1)
emission_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u1xoi"]
resource_name = "woodDark"
albedo_color = Color(0.842287, 0.70556, 0.58297, 1)
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_7tr00"]
_surfaces = [{
"aabb": AABB(0, 0, -0.2125, 0.2125, 0.281, 0.21251),
"format": 34896613377,
"index_count": 162,
"index_data": PackedByteArray(2, 0, 0, 0, 1, 0, 1, 0, 3, 0, 2, 0, 0, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 6, 0, 4, 0, 5, 0, 5, 0, 7, 0, 6, 0, 4, 0, 6, 0, 5, 0, 7, 0, 5, 0, 6, 0, 9, 0, 8, 0, 6, 0, 6, 0, 7, 0, 9, 0, 8, 0, 9, 0, 6, 0, 7, 0, 6, 0, 9, 0, 6, 0, 8, 0, 10, 0, 10, 0, 11, 0, 6, 0, 11, 0, 12, 0, 6, 0, 0, 0, 6, 0, 12, 0, 13, 0, 0, 0, 12, 0, 12, 0, 14, 0, 13, 0, 8, 0, 6, 0, 10, 0, 11, 0, 10, 0, 6, 0, 12, 0, 11, 0, 6, 0, 6, 0, 0, 0, 12, 0, 0, 0, 13, 0, 12, 0, 14, 0, 12, 0, 13, 0, 10, 0, 11, 0, 14, 0, 12, 0, 14, 0, 11, 0, 1, 0, 0, 0, 13, 0, 13, 0, 15, 0, 1, 0, 0, 0, 1, 0, 13, 0, 15, 0, 13, 0, 1, 0, 1, 0, 15, 0, 16, 0, 16, 0, 17, 0, 1, 0, 17, 0, 18, 0, 1, 0, 7, 0, 1, 0, 18, 0, 9, 0, 7, 0, 18, 0, 18, 0, 19, 0, 9, 0, 15, 0, 1, 0, 16, 0, 17, 0, 16, 0, 1, 0, 18, 0, 17, 0, 1, 0, 1, 0, 7, 0, 18, 0, 7, 0, 9, 0, 18, 0, 19, 0, 18, 0, 9, 0, 9, 0, 19, 0, 10, 0, 10, 0, 8, 0, 9, 0, 14, 0, 10, 0, 19, 0, 19, 0, 16, 0, 14, 0, 13, 0, 14, 0, 16, 0, 16, 0, 15, 0, 13, 0, 19, 0, 9, 0, 10, 0, 8, 0, 10, 0, 9, 0, 19, 0, 18, 0, 16, 0, 17, 0, 16, 0, 18, 0, 15, 0, 16, 0, 13, 0, 14, 0, 13, 0, 16, 0),
"name": "wood",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(0, 0, 85, 201, 251, 255, 0, 0, 0, 0, 85, 201, 0, 0, 0, 0, 255, 127, 255, 255, 251, 255, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 255, 127, 170, 228, 251, 255, 0, 0, 255, 127, 170, 228, 0, 0, 0, 0, 255, 255, 85, 201, 251, 255, 0, 0, 255, 255, 85, 201, 0, 0, 0, 0, 255, 255, 0, 0, 251, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 251, 255, 0, 0, 122, 148, 52, 54, 251, 255, 0, 0, 132, 107, 52, 54, 251, 255, 0, 0, 0, 0, 0, 0, 251, 255, 0, 0, 132, 107, 0, 0, 251, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 132, 107, 0, 0, 0, 0, 0, 0, 132, 107, 52, 54, 0, 0, 0, 0, 122, 148, 52, 54, 0, 0, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0)
}, {
"aabb": AABB(0, 0, -0.2125, 0.2125, 0.281, 0.21251),
"format": 34896613377,
"index_count": 18,
"index_data": PackedByteArray(18, 0, 19, 0, 16, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 14, 0, 10, 0, 14, 0, 19, 0, 11, 0, 10, 0, 14, 0, 14, 0, 12, 0, 11, 0),
"name": "woodDark",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(0, 0, 85, 201, 251, 255, 0, 0, 0, 0, 85, 201, 0, 0, 0, 0, 255, 127, 255, 255, 251, 255, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 255, 127, 170, 228, 251, 255, 0, 0, 255, 127, 170, 228, 0, 0, 0, 0, 255, 255, 85, 201, 251, 255, 0, 0, 255, 255, 85, 201, 0, 0, 0, 0, 255, 255, 0, 0, 251, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 251, 255, 0, 0, 122, 148, 52, 54, 251, 255, 0, 0, 132, 107, 52, 54, 251, 255, 0, 0, 0, 0, 0, 0, 251, 255, 0, 0, 132, 107, 0, 0, 251, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 132, 107, 0, 0, 0, 0, 0, 0, 132, 107, 52, 54, 0, 0, 0, 0, 122, 148, 52, 54, 0, 0, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6q11s"]
resource_name = "cardboardBoxClosed_Mesh cardboardBoxClosed"
_surfaces = [{
"aabb": AABB(0, 0, -0.2125, 0.2125, 0.281, 0.21251),
"attribute_data": PackedByteArray(255, 127, 20, 76, 0, 0, 20, 76, 255, 127, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 20, 76, 255, 127, 20, 76, 0, 0, 0, 0, 255, 127, 16, 165, 255, 255, 16, 165, 255, 127, 230, 233, 255, 255, 230, 233, 255, 127, 230, 233, 255, 255, 16, 165, 255, 127, 16, 165, 255, 255, 230, 233, 255, 127, 213, 143, 255, 127, 10, 6, 255, 255, 213, 143, 255, 255, 10, 6, 255, 255, 213, 143, 255, 127, 10, 6, 255, 127, 213, 143, 255, 255, 10, 6, 255, 255, 213, 143, 60, 202, 213, 143, 255, 255, 10, 6, 60, 202, 188, 106, 193, 181, 188, 106, 255, 127, 10, 6, 255, 127, 213, 143, 193, 181, 213, 143, 255, 255, 10, 6, 60, 202, 213, 143, 255, 255, 213, 143, 60, 202, 188, 106, 193, 181, 188, 106, 255, 127, 10, 6, 255, 127, 213, 143, 193, 181, 213, 143, 255, 127, 10, 6, 255, 127, 213, 143, 0, 0, 10, 6, 0, 0, 213, 143, 0, 0, 10, 6, 255, 127, 213, 143, 255, 127, 10, 6, 0, 0, 213, 143, 255, 127, 213, 143, 61, 74, 213, 143, 255, 127, 10, 6, 61, 74, 188, 106, 194, 53, 188, 106, 0, 0, 10, 6, 0, 0, 213, 143, 194, 53, 213, 143, 255, 127, 10, 6, 61, 74, 213, 143, 255, 127, 213, 143, 61, 74, 188, 106, 194, 53, 188, 106, 0, 0, 10, 6, 0, 0, 213, 143, 194, 53, 213, 143, 194, 53, 87, 11, 194, 53, 213, 143, 0, 0, 87, 11, 0, 0, 213, 143, 61, 74, 213, 143, 61, 74, 87, 11, 255, 127, 213, 143, 255, 127, 87, 11, 0, 0, 87, 11, 194, 53, 213, 143, 194, 53, 87, 11, 0, 0, 213, 143, 60, 202, 188, 106, 193, 181, 213, 143, 60, 202, 213, 143, 193, 181, 188, 106, 61, 74, 87, 11, 255, 127, 213, 143, 255, 127, 87, 11, 61, 74, 213, 143, 60, 202, 213, 143, 193, 181, 213, 143, 60, 202, 188, 106, 193, 181, 188, 106),
"format": 34896613399,
"index_count": 162,
"index_data": PackedByteArray(2, 0, 0, 0, 1, 0, 1, 0, 3, 0, 2, 0, 6, 0, 4, 0, 5, 0, 7, 0, 5, 0, 4, 0, 10, 0, 8, 0, 9, 0, 9, 0, 11, 0, 10, 0, 14, 0, 12, 0, 13, 0, 15, 0, 13, 0, 12, 0, 18, 0, 16, 0, 17, 0, 17, 0, 19, 0, 18, 0, 22, 0, 20, 0, 21, 0, 23, 0, 21, 0, 20, 0, 26, 0, 24, 0, 25, 0, 25, 0, 27, 0, 26, 0, 27, 0, 28, 0, 26, 0, 29, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 28, 0, 31, 0, 30, 0, 34, 0, 32, 0, 33, 0, 35, 0, 33, 0, 32, 0, 36, 0, 35, 0, 32, 0, 32, 0, 37, 0, 36, 0, 37, 0, 38, 0, 36, 0, 39, 0, 36, 0, 38, 0, 33, 0, 35, 0, 39, 0, 36, 0, 39, 0, 35, 0, 42, 0, 40, 0, 41, 0, 41, 0, 43, 0, 42, 0, 46, 0, 44, 0, 45, 0, 47, 0, 45, 0, 44, 0, 50, 0, 48, 0, 49, 0, 49, 0, 51, 0, 50, 0, 51, 0, 52, 0, 50, 0, 53, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 52, 0, 55, 0, 54, 0, 58, 0, 56, 0, 57, 0, 59, 0, 57, 0, 56, 0, 60, 0, 59, 0, 56, 0, 56, 0, 61, 0, 60, 0, 61, 0, 62, 0, 60, 0, 63, 0, 60, 0, 62, 0, 66, 0, 64, 0, 65, 0, 65, 0, 67, 0, 66, 0, 68, 0, 65, 0, 64, 0, 64, 0, 69, 0, 68, 0, 70, 0, 68, 0, 69, 0, 69, 0, 71, 0, 70, 0, 74, 0, 72, 0, 73, 0, 75, 0, 73, 0, 72, 0, 78, 0, 76, 0, 77, 0, 79, 0, 77, 0, 76, 0, 82, 0, 80, 0, 81, 0, 83, 0, 81, 0, 80, 0),
"material": SubResource("StandardMaterial3D_xj64e"),
"name": "wood",
"primitive": 3,
"uv_scale": Vector4(16.7323, 16.1646, 0, 0),
"vertex_count": 88,
"vertex_data": PackedByteArray(0, 0, 85, 201, 251, 255, 119, 202, 0, 0, 85, 201, 0, 0, 119, 202, 255, 127, 255, 255, 251, 255, 119, 202, 255, 127, 255, 255, 0, 0, 119, 202, 255, 127, 255, 255, 251, 255, 179, 29, 0, 0, 85, 201, 0, 0, 179, 29, 0, 0, 85, 201, 251, 255, 179, 29, 255, 127, 255, 255, 0, 0, 179, 29, 255, 127, 170, 228, 251, 255, 46, 207, 255, 127, 170, 228, 0, 0, 46, 207, 255, 255, 85, 201, 251, 255, 46, 207, 255, 255, 85, 201, 0, 0, 46, 207, 255, 255, 85, 201, 251, 255, 235, 35, 255, 127, 170, 228, 0, 0, 235, 35, 255, 127, 170, 228, 251, 255, 235, 35, 255, 255, 85, 201, 0, 0, 235, 35, 255, 255, 0, 0, 251, 255, 255, 191, 255, 255, 85, 201, 251, 255, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 85, 201, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 85, 201, 251, 255, 0, 0, 255, 255, 0, 0, 251, 255, 0, 0, 255, 255, 85, 201, 0, 0, 0, 0, 255, 255, 0, 0, 251, 255, 255, 127, 122, 148, 0, 0, 251, 255, 255, 127, 255, 255, 85, 201, 251, 255, 255, 127, 122, 148, 52, 54, 251, 255, 255, 127, 132, 107, 52, 54, 251, 255, 255, 127, 0, 0, 85, 201, 251, 255, 255, 127, 0, 0, 0, 0, 251, 255, 255, 127, 132, 107, 0, 0, 251, 255, 255, 127, 255, 255, 85, 201, 251, 255, 0, 0, 122, 148, 0, 0, 251, 255, 0, 0, 255, 255, 0, 0, 251, 255, 0, 0, 122, 148, 52, 54, 251, 255, 0, 0, 132, 107, 52, 54, 251, 255, 0, 0, 0, 0, 85, 201, 251, 255, 0, 0, 0, 0, 0, 0, 251, 255, 0, 0, 132, 107, 0, 0, 251, 255, 0, 0, 0, 0, 85, 201, 251, 255, 255, 191, 0, 0, 0, 0, 251, 255, 255, 191, 0, 0, 85, 201, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 85, 201, 0, 0, 0, 0, 0, 0, 0, 0, 251, 255, 0, 0, 0, 0, 85, 201, 251, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 0, 0, 85, 201, 0, 0, 255, 255, 132, 107, 52, 54, 0, 0, 255, 255, 122, 148, 52, 54, 0, 0, 255, 255, 255, 255, 85, 201, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 0, 0, 255, 255, 0, 0, 85, 201, 0, 0, 0, 0, 132, 107, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 132, 107, 52, 54, 0, 0, 0, 0, 122, 148, 52, 54, 0, 0, 0, 0, 255, 255, 85, 201, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 251, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 251, 255, 255, 255, 132, 107, 0, 0, 251, 255, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 251, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 251, 255, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 251, 255, 0, 0, 122, 148, 52, 54, 0, 0, 0, 0, 132, 107, 0, 0, 0, 0, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0, 132, 107, 52, 54, 0, 0, 0, 0, 132, 107, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 132, 107, 0, 0, 251, 255, 0, 0, 122, 148, 0, 0, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 122, 148, 52, 54, 0, 0, 255, 255, 132, 107, 52, 54, 0, 0, 255, 255, 120, 162, 13, 187, 120, 162, 13, 187, 120, 162, 13, 187, 120, 162, 13, 187, 234, 28, 116, 206, 234, 28, 116, 206, 234, 28, 116, 206, 234, 28, 116, 206, 18, 205, 137, 38, 18, 205, 137, 38, 18, 205, 137, 38, 18, 205, 137, 38, 145, 81, 220, 92, 145, 81, 220, 92, 145, 81, 220, 92, 145, 81, 220, 92, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127)
}, {
"aabb": AABB(0, 0, -0.2125, 0.2125, 0.281, 0.21251),
"attribute_data": PackedByteArray(255, 127, 20, 76, 0, 0, 20, 76, 255, 127, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 20, 76, 255, 127, 20, 76, 0, 0, 0, 0, 255, 127, 16, 165, 255, 255, 16, 165, 255, 127, 230, 233, 255, 255, 230, 233, 255, 127, 230, 233, 255, 255, 16, 165, 255, 127, 16, 165, 255, 255, 230, 233, 255, 127, 213, 143, 255, 127, 10, 6, 255, 255, 213, 143, 255, 255, 10, 6, 255, 255, 213, 143, 255, 127, 10, 6, 255, 127, 213, 143, 255, 255, 10, 6, 255, 255, 213, 143, 60, 202, 213, 143, 255, 255, 10, 6, 60, 202, 188, 106, 193, 181, 188, 106, 255, 127, 10, 6, 255, 127, 213, 143, 193, 181, 213, 143, 255, 255, 10, 6, 60, 202, 213, 143, 255, 255, 213, 143, 60, 202, 188, 106, 193, 181, 188, 106, 255, 127, 10, 6, 255, 127, 213, 143, 193, 181, 213, 143, 255, 127, 10, 6, 255, 127, 213, 143, 0, 0, 10, 6, 0, 0, 213, 143, 0, 0, 10, 6, 255, 127, 213, 143, 255, 127, 10, 6, 0, 0, 213, 143, 255, 127, 213, 143, 61, 74, 213, 143, 255, 127, 10, 6, 61, 74, 188, 106, 194, 53, 188, 106, 0, 0, 10, 6, 0, 0, 213, 143, 194, 53, 213, 143, 255, 127, 10, 6, 61, 74, 213, 143, 255, 127, 213, 143, 61, 74, 188, 106, 194, 53, 188, 106, 0, 0, 10, 6, 0, 0, 213, 143, 194, 53, 213, 143, 194, 53, 87, 11, 194, 53, 213, 143, 0, 0, 87, 11, 0, 0, 213, 143, 61, 74, 213, 143, 61, 74, 87, 11, 255, 127, 213, 143, 255, 127, 87, 11, 0, 0, 87, 11, 194, 53, 213, 143, 194, 53, 87, 11, 0, 0, 213, 143, 60, 202, 188, 106, 193, 181, 213, 143, 60, 202, 213, 143, 193, 181, 188, 106, 61, 74, 87, 11, 255, 127, 213, 143, 255, 127, 87, 11, 61, 74, 213, 143, 60, 202, 213, 143, 193, 181, 213, 143, 60, 202, 188, 106, 193, 181, 188, 106),
"format": 34896613399,
"index_count": 18,
"index_data": PackedByteArray(86, 0, 84, 0, 85, 0, 85, 0, 87, 0, 86, 0, 80, 0, 74, 0, 83, 0, 73, 0, 83, 0, 74, 0, 27, 0, 25, 0, 31, 0, 31, 0, 28, 0, 27, 0),
"material": SubResource("StandardMaterial3D_u1xoi"),
"name": "woodDark",
"primitive": 3,
"uv_scale": Vector4(16.7323, 16.1646, 0, 0),
"vertex_count": 88,
"vertex_data": PackedByteArray(0, 0, 85, 201, 251, 255, 84, 213, 0, 0, 85, 201, 0, 0, 84, 213, 255, 127, 255, 255, 251, 255, 84, 213, 255, 127, 255, 255, 0, 0, 84, 213, 255, 127, 255, 255, 251, 255, 84, 213, 0, 0, 85, 201, 0, 0, 84, 213, 0, 0, 85, 201, 251, 255, 84, 213, 255, 127, 255, 255, 0, 0, 84, 213, 255, 127, 170, 228, 251, 255, 84, 213, 255, 127, 170, 228, 0, 0, 84, 213, 255, 255, 85, 201, 251, 255, 84, 213, 255, 255, 85, 201, 0, 0, 84, 213, 255, 255, 85, 201, 251, 255, 84, 213, 255, 127, 170, 228, 0, 0, 84, 213, 255, 127, 170, 228, 251, 255, 84, 213, 255, 255, 85, 201, 0, 0, 84, 213, 255, 255, 0, 0, 251, 255, 84, 213, 255, 255, 85, 201, 251, 255, 84, 213, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 85, 201, 0, 0, 84, 213, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 85, 201, 251, 255, 84, 213, 255, 255, 0, 0, 251, 255, 84, 213, 255, 255, 85, 201, 0, 0, 84, 213, 255, 255, 0, 0, 251, 255, 255, 255, 122, 148, 0, 0, 251, 255, 255, 127, 255, 255, 85, 201, 251, 255, 255, 255, 122, 148, 52, 54, 251, 255, 255, 127, 132, 107, 52, 54, 251, 255, 255, 127, 0, 0, 85, 201, 251, 255, 255, 255, 0, 0, 0, 0, 251, 255, 255, 255, 132, 107, 0, 0, 251, 255, 255, 127, 255, 255, 85, 201, 251, 255, 255, 255, 122, 148, 0, 0, 251, 255, 255, 255, 255, 255, 0, 0, 251, 255, 255, 255, 122, 148, 52, 54, 251, 255, 255, 255, 132, 107, 52, 54, 251, 255, 255, 255, 0, 0, 85, 201, 251, 255, 255, 255, 0, 0, 0, 0, 251, 255, 255, 255, 132, 107, 0, 0, 251, 255, 255, 255, 0, 0, 85, 201, 251, 255, 84, 213, 0, 0, 0, 0, 251, 255, 84, 213, 0, 0, 85, 201, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 85, 201, 0, 0, 84, 213, 0, 0, 0, 0, 251, 255, 84, 213, 0, 0, 85, 201, 251, 255, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 0, 0, 85, 201, 0, 0, 255, 255, 132, 107, 52, 54, 0, 0, 255, 255, 122, 148, 52, 54, 0, 0, 255, 255, 255, 255, 85, 201, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 0, 0, 255, 255, 0, 0, 85, 201, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 132, 107, 52, 54, 0, 0, 255, 255, 122, 148, 52, 54, 0, 0, 255, 255, 255, 255, 85, 201, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 0, 0, 84, 213, 122, 148, 0, 0, 251, 255, 84, 213, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 0, 0, 251, 255, 84, 213, 132, 107, 0, 0, 251, 255, 84, 213, 132, 107, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 251, 255, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 255, 255, 0, 0, 0, 0, 84, 213, 122, 148, 0, 0, 251, 255, 0, 0, 122, 148, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 251, 255, 84, 213, 122, 148, 52, 54, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 255, 255, 122, 148, 0, 0, 0, 0, 255, 255, 132, 107, 52, 54, 0, 0, 255, 255, 132, 107, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 255, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 132, 107, 0, 0, 251, 255, 0, 0, 122, 148, 0, 0, 0, 0, 255, 127, 132, 107, 0, 0, 0, 0, 255, 127, 122, 148, 52, 54, 0, 0, 255, 127, 132, 107, 52, 54, 0, 0, 255, 127, 205, 209, 49, 174, 205, 209, 49, 174, 205, 209, 49, 174, 205, 209, 49, 174, 49, 46, 205, 81, 49, 46, 205, 81, 49, 46, 205, 81, 49, 46, 205, 81, 208, 227, 208, 99, 208, 227, 208, 99, 208, 227, 208, 99, 208, 227, 208, 99, 46, 28, 46, 156, 46, 28, 46, 156, 46, 28, 46, 156, 46, 28, 46, 156, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 255, 191, 255, 255, 255, 127, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_7tr00")

[node name="box" type="RigidBody3D"]
mass = 0.2
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0, -0.2)
script = ExtResource("1_pes30")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(4.59, 0, 0, 0, 4.59, 0, 0, 0, 4.59, -0.487312, -0.498364, 0.294653)
shape = SubResource("ConvexPolygonShape3D_avy5c")

[node name="player_detector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.228246)
shape = SubResource("BoxShape3D_1iic7")

[node name="dmg_dealer" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("2_sx15f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="dmg_dealer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.188872)
shape = SubResource("BoxShape3D_n5fdi")
disabled = true

[node name="cardboardBoxClosed(Clone)" type="MeshInstance3D" parent="dmg_dealer"]
transform = Transform3D(4.59, 0, 0, 0, 4.59, 0, 0, 0, 4.59, -0.487312, -0.498364, 0.294653)
mesh = SubResource("ArrayMesh_6q11s")
skeleton = NodePath("")

[connection signal="body_entered" from="player_detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="player_detector" to="." method="_on_player_detector_body_exited"]
